--- a/index.html
+++ b/index.html
@@ -1,71 +1,65 @@
 <!DOCTYPE html>
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&display=swap"
-      rel="stylesheet"
-    />
-    <link rel="stylesheet" href="index.css" />
-    <title>Unit Converter</title>
-  </head>
-  <body>
-    <main>
-      <article>
-        <section class="conversion-section">
-          <h1>Metric/Imperial unit conversion</h1>
-          <input
-            id="number-input"
-            type="number"
-            value="20"
-            oninput="updateValues()"
-            autofocus
-            onfocus="let temp = this.value;
-                     this.value = null;
-                     this.value = temp"
-          />
-        </section>
-        <div class="wrapper flow">
-          <div>
-            <h2>Length (Meters/Feet)</h2>
-            <p>
-              <span class="input-span"></span> meters =
-              <span id="feet"></span> feet</p>
-               <span class="bar">|</span>
-               <p>
-              <span class="input-span"></span> feet =
-              <span id="meters"></span> meters
-            </p>
-          </div>
 
-          <div>
-            <h2>Volume (Liters/Gallons)</h2>
-            <p>
-              <span class="input-span"></span> liters =
-              <span id="gallons"></span> gallons</p>
-              <span class="bar">|</span>
-              <p>
-              <span class="input-span"></span> gallons =
-              <span id="liters"></span> liters
-            </p>
-          </div>
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&display=swap" rel="stylesheet" />
+  <link rel="stylesheet" href="index.css" />
+  <title>Unit Converter</title>
+</head>
 
-          <div>
-            <h2>Mass (Kilograms/Pounds)</h2>
-            <p>
-              <span class="input-span"></span> kilos =
-              <span id="pounds"></span> pounds</p>
-              <span class="bar">|</span>
-              <p>
-              <span class="input-span"></span> pounds =
-              <span id="kilos"></span> kilos
-            </p>
-          </div>
+<body>
+  <main>
+    <article>
+      <section class="conversion-section">
+        <h1>Metric/Imperial unit conversion</h1>
+        <input id="number-input" type="number" value="20" autofocus />
+      </section>
+      <div class="wrapper flow">
+        <div>
+          <h2>Length (Meters/Feet)</h2>
+          <p>
+            <span class="input-span"></span> meters =
+            <span id="feet"></span> feet
+          </p>
+          <span class="bar">|</span>
+          <p>
+            <span class="input-span"></span> feet =
+            <span id="meters"></span> meters
+          </p>
         </div>
-      </article>
-    </main>
-    <script src="index.js"></script>
-  </body>
+
+        <div>
+          <h2>Volume (Liters/Gallons)</h2>
+          <p>
+            <span class="input-span"></span> liters =
+            <span id="gallons"></span> gallons
+          </p>
+          <span class="bar">|</span>
+          <p>
+            <span class="input-span"></span> gallons =
+            <span id="liters"></span> liters
+          </p>
+        </div>
+
+        <div>
+          <h2>Mass (Kilograms/Pounds)</h2>
+          <p>
+            <span class="input-span"></span> kilos =
+            <span id="pounds"></span> pounds
+          </p>
+          <span class="bar">|</span>
+          <p>
+            <span class="input-span"></span> pounds =
+            <span id="kilos"></span> kilos
+          </p>
+        </div>
+      </div>
+    </article>
+  </main>
+  <script src="index.js"></script>
+</body>
+
 </html>
