--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <article>
       <section class="conversion-section">
         <h1>Metric/Imperial unit conversion</h1>
-        <input id="number-input" type="number" value="20" autofocus />
+        <input id="number-input" type="number" value="20" />
       </section>
       <div class="wrapper flow">
         <div>
